DSA-Using-c/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:57:40 **** Clean-only build of configuration Debug for project Linked List ****
make clean 
rm -rf ./src/Doubly_Linked_List.d ./src/Doubly_Linked_List.o
rm -rf Linked\\ List
 
15:57:40 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
15:57:49 **** Incremental Build of configuration Debug for project Linked List ****
make all 
make: Nothing to be done for 'all'.
15:58:16 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
15:58:49 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
16:08:52 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
16:10:27 **** Incremental Build of configuration Debug for project Linked List ****
make all 
make: Nothing to be done for 'all'.
16:16:35 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
16:18:43 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
../src/Doubly_Circular_Linked_List.c: In function ‘insertAtEnd’:
../src/Doubly_Circular_Linked_List.c:107:18: error: expected ‘;’ before ‘}’ token
  107 |         display()
      |                  ^
      |                  ;
  108 | }
      | ~                 
make: *** [src/subdir.mk:20: src/Doubly_Circular_Linked_List.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:18:52 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Circular_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Circular_Linked_List.d" -MT"src/Doubly_Circular_Linked_List.o" -o "src/Doubly_Circular_Linked_List.o" "../src/Doubly_Circular_Linked_List.c"
Finished building: ../src/Doubly_Circular_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Circular_Linked_List.o   
Finished building target: Linked List
 
15:13:00 **** Clean-only build of configuration Debug for project Linked List ****
make clean 
rm -rf ./src/Doubly_Circular_Linked_List.d ./src/Doubly_Circular_Linked_List.o
rm -rf Linked\\ List
 
15:13:01 **** Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Linked_List.d" -MT"src/Doubly_Linked_List.o" -o "src/Doubly_Linked_List.o" "../src/Doubly_Linked_List.c"
../src/Doubly_Linked_List.c: In function ‘reverse’:
../src/Doubly_Linked_List.c:210:22: warning: unused variable ‘temp’ [-Wunused-variable]
  210 |         struct Node *temp = head;
      |                      ^~~~
Finished building: ../src/Doubly_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Linked_List.o   
Finished building target: Linked List
 
15:13:39 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Linked_List.d" -MT"src/Doubly_Linked_List.o" -o "src/Doubly_Linked_List.o" "../src/Doubly_Linked_List.c"
Finished building: ../src/Doubly_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Linked_List.o   
Finished building target: Linked List
 
15:23:15 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Linked_List.d" -MT"src/Doubly_Linked_List.o" -o "src/Doubly_Linked_List.o" "../src/Doubly_Linked_List.c"
../src/Doubly_Linked_List.c: In function ‘reverse’:
../src/Doubly_Linked_List.c:214:25: warning: comparison between pointer and integer
  214 |         while(curr-next != NULL){
      |                         ^~
Finished building: ../src/Doubly_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Linked_List.o   
Finished building target: Linked List
 
15:23:36 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Linked_List.d" -MT"src/Doubly_Linked_List.o" -o "src/Doubly_Linked_List.o" "../src/Doubly_Linked_List.c"
Finished building: ../src/Doubly_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Linked_List.o   
Finished building target: Linked List
 
15:26:17 **** Incremental Build of configuration Debug for project Linked List ****
make all 
Building file: ../src/Doubly_Linked_List.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Doubly_Linked_List.d" -MT"src/Doubly_Linked_List.o" -o "src/Doubly_Linked_List.o" "../src/Doubly_Linked_List.c"
Finished building: ../src/Doubly_Linked_List.c
 
Building target: Linked List
Invoking: GCC C Linker
gcc  -o "Linked List" ./src/Doubly_Linked_List.o   
Finished building target: Linked List
 
